force-app/main/default/objects/HDT_StatementRequest__mdt/HDT_StatementRequest__mdt.object-meta.xml
<CustomObject>
    <label>Request Estratto Conto</label>
    <pluralLabel>Request Estratto Conto</pluralLabel>
</CustomObject>