force-app/main/default/objects/HDT_StatementRequest__mdt/fields/Aggregation__c.field-meta.xml
<CustomField>
    <fullName>Aggregation__c</fullName>
    <label>Aggregazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <default>true</default>
                <label>Nr. Fattura</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Nr. Fattura - Conto Contrattuale</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Scadenza Documento</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Società</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>