force-app/main/default/objects/HDT_StatementRequest__mdt/fields/PicklistValues__c.field-meta.xml
<CustomField>
    <fullName>PicklistValues__c</fullName>
    <label>Picklist values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>