force-app/main/default/objects/HDT_StatementRequest__mdt/fields/StatementType__c.field-meta.xml
<CustomField>
    <fullName>StatementType__c</fullName>
    <label>Tipo Estratto Conto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ORDINARIO</fullName>
                <default>true</default>
                <label>ORDINARIO</label>
            </value>
            <value>
                <fullName>TARI</fullName>
            </value>
            <value>
                <fullName>TARES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>